[project]
name = "ecal-docs"
requires-python = ">=3.10"
dependencies = [
  "sphinx >= 8.0.0, < 10.0.0", # [Versions 8.x - 9.x]
  "sphinx-book-theme >= 1.1.2, < 1.3.0", # [Versions 1.1.2 - 1.2.x] (Current CSS Rules are known to be compatible with those versions)
  "sphinx-tabs == 3.5",       # (Current CSS Rule is known to be compatible with that version)
  "PyGithub",
  "autodoc",
  "semantic-version", 
  "exhale",
  "Jinja2",
  "sphinxcontrib-apidoc",
  "sphinxcontrib-youtube"
]
